# claude-sandbox-test1

./: .aiignore  .dockerignore  .env.example  .gitignore  AGENTS.md  AI_OPERATIONS_PLAN.md  BENCHMARKS.md  CAPABILITY_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOAL.md  OPERATOR_GUIDE.md  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  dummy-submit.py  package-lock.json  package.json  plan.md  pr-description.md  pr_description.md  pr_description.txt  run_test.ts  submit.py  tsconfig.json  vitest.config.ts
.agent/: master_plan.md
.claude/: model-policy.json
.github/: PULL_REQUEST_TEMPLATE.md
bench/: throughput.mjs
clients/python/: README.md  pyproject.toml
clients/python/posthorn/: __init__.py  _http.py  client.py  webhooks.py
clients/python/tests/: e2e.py  test_http.py  test_webhooks.py
docs/: AGENT-LOOP.md  AGENT_GUIDES.md  AXIOMS.md  DEPLOY.md  ENGINEERING_REVIEW.md  GOAL.md  LOG.md  LOOP_LOG.md  PARITY.md  PROJECT.md  grafana-dashboard.json  prometheus-alerts.yml  prometheus.yml
monitoring/: alerts.yml  prometheus.yml
plan/: AGENTS.md  BACKLOG.md  BASELINE.md  EXECUTION_GOAL.md  PROGRESS.md  README.md  RESEARCH.md  RISK_REGISTER.md  ROADMAP.md
posthorn-data/: posthorn.sqlite
roadmap/: DECISIONS.md  PROGRESS.md  ROADMAP.md  STATUS.md  features.json  metrics.jsonl
scripts/: assert-gate-integrity.ps1  bash-node-bridge.sh  bash-node-runner.sh  build-site.mjs  generate-visual-snapshots.ts  local-gate.ps1  manifest.txt  run-autonomous-loop.ps1  smoke-backup-restore.mjs  smoke-billing.mjs  (+18 more)
(+307 files in other folders)
